--- a/style.css
+++ b/style.css
@@ -1,118 +1,237 @@
 *{
     margin:0;
     padding:0;
+    font-family:'Trebuchet Ms','Lucida Sans Unicode','Lucida Grande','Lucida Sans','Arial','sans-serif';
     box-sizing:border-box;
 }
-body{
-    background-image: url(https://t3.ftcdn.net/jpg/01/04/35/20/240_F_104352051_f4aIyRf72jwylPW0cirnY2gpZjDx0JSV.jpg);
-    background-size:auto;
-    background-position: center;
-}
-header{
-    width: 100%;
-    position:sticky;
-    top:0;
-    z-index: 1;
-    background: transparent;
-}
-header .container{
-    height: 10vh;
-    width: 100%;
-    margin: 0 auto;
-    padding:0 50px;
-}
-    
-.logo{
-    display:flex;
-    align-items: center;
-}
-.logo i{
-    height: 15px;
-    width: 30px;
-}
-.logo p{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 20px;
-    font-weight: 500;
-    cursor: default;
-}
-a{
-    text-decoration: none;
-    color:rgb(4, 40, 72);
-}
-ul{
-    display: flex;
-    gap: 14px;
-    list-style: none;
-}
-nav{
-    display:flex;
-    justify-content: space-between;
-    align-items:center;
-    padding:14px;
-    
-}
-.main{
-    width: 100%;
-    height: 10vh;
-    position: center;
-    scroll-padding:14px;
-}
-.main {
-    display: block;
-    margin: auto;
-    position:fixed;
-    height: 60%;
-    width: 25%;
-    filter:drop-shadow(20px 20px 40px rgb(49, 7, 7));
-    background-image:url("https://img.freepik.com/free-vector/abstract-watercolor-pastel-background_87374-139.jpg");
-    background-size:100%;
-    margin-left: 35%;
-    margin-top: 15%;
-    display: flex;
-    justify-content: center;
-    border-radius: 5%;
-    
-    
-    
-}
-.content{
-    width:100% ;
+html,body{
+    width:100%;
     height:100%;
-    display:block;
-    margin: auto;
-    position:absolute;
-    top:0;
-    left:0;
 }
-.content .container{
-    justify-content: center;
+#main{
+    width:100%;
+    min-height:100vh;
+}
+.top{
+    width:100%;
+    min-height:60vh;
+    background-image:url(https://images7.alphacoders.com/117/1174324.jpg);
+    background-size:cover;
+    background-position:center;
+    
+    
+}
+.icons a{
+    color:aliceblue;
+}
+.icons :hover{
+    color: rgb(235, 241, 236);
+    background-color: rgb(65, 205, 43);
+    height:2%;
+    size:100px;
+    margin-top: 2%;
+}
+
+
+.top .overlay{
+    position:relative;
+    width:100%;
+    min-height:inherit;
+    background-color:rgba(0,0,0,0.295);
+}
+.text{
+    display:flex;
+    justify-content:space-between;
+    align-items:left;
+    position:relative;
+    width:100%;
+    height:100%;
+    padding:0 10vh;
+    color:rgb(230, 221, 221);
+    
+    
+}
+.text h1 :hover{
+    background-color: green;
+    font-weight:600;
+    font-size:4vw;
+    list-style:none;
+    display:inline-block;
+    color:rgb(165, 213, 213);
+    margin:0 20px;
+    position:relative;
+    
+}
+.text h1{
+    
+    border: none;
+    color: rgb(110, 187, 207);
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 50px;
+    margin: 4px 2px;
+    opacity: 0.4;
+    transition: 0.3s;
+      
+    
+}
+.text h1:hover::after{opacity: 4}
+
+.rtext{
+    display:flex;
+    width:25%;
+    align-items: center;
+    justify-content: space-between;
+}
+.rtext p{
+    font-size: 12px;
+
+
+}
+.bottom{
+    display:flex;
+    width:100%;
+    min-height:40vh;
+}
+.b1 {
+    width:30%;
+    min-height:inherit;
+    background-image:url(https://live.staticflickr.com/399/31251913904_b50e80ce68_b.jpg);
+    background-size:cover;
+    background-position :center;
+
+}
+.b1 h1{
+    text-align:center;
+    padding:30px;
+}
+.b1 p{
+    color:white;
+    text-align:start;
+    padding:15px;
+}
+.b2{
+    width:30%;
+    min-height:inherit;
     display:flex;
     flex-direction: column;
-    width: 250px;
-    margin:auto;
+}
+.b2 .up {
+    width:100%;
+    min-height:20vh;
+    background-image:url(https://lalluram.com/wp-content/uploads/2023/12/pahadi-maina2.jpg);
+    background-position:center;
+    background-size: 82%;
+    background-blend-mode: darken;
+    -moz-box-pack: center;
+}
+
+
+
+.b2 .up h1{
+    text-align:center;
+    padding:25px;
+    color:bisque
+}
+.b2 .up p{
+    color:rgb(231, 224, 224);
+    text-align:center;
+    padding:15px;
+}
+.b2 .down {
+    width:100%;
+    min-height:20vh;
+    background-image:url(https://cdn.mos.cms.futurecdn.net/ZvjCHMQPjCTcMcHiJDapLR-970-80.jpg.webp);
+    background-size: cover;
+    background-position:center;
+    background-blend-mode: darken;
+    -moz-box-pack: center;
+}
+.b2 .down h1{
+    text-align:right;
+    color:white;
+    padding:1px;
+    
+}
+
+
+
+.b3{
+    width:40%;
+    min-height:inherit;
+    background-image:url(https://img.freepik.com/premium-photo/deer-with-horns-horns-is-standing-woods_783884-12.jpg?w=900);
+    background-size: cover;
+    background-position:center;
+
+}
+.b3 .overlay{
+    justify-content: right;
+    position: relative;
+    margin-right: 100%;
+    width:50%;
     height:100%;
-    color:aliceblue;
+    padding:1vw 1vh;
 }
-.todo{
-    display: flex;
-    padding: 14px;
-    color:aliceblue;
+.b3 .overlay h1{
+    text-align:right;
+    text-shadow: 1cap;
+    color:rgb(243, 218, 218);
+    padding:1px;
 }
-.todo_value{
-    cursor:inherit;
-    background:transparent;
-    color: rgb(67, 116, 231);
-    border:none;
-    outline:none;
-    font-family:'Times New Roman', Times, serif;
-    font-size: 15px;
-    font-weight: bold;
-    flex-grow: 1;
-    border-bottom: 2px solid rgb(100, 158, 232);
+.b3 .overlay p{
+    padding:1.2vh;
+    text-align: left;
+    color:rgb(202, 244, 244);
+    
 }
-.todo:has(.todo_checkbox:checked){
-    color: rgb(224, 210, 200);
-    background: rgba(0,0,0,0.13);
-    text-decoration: line-through 1.5px;
+@media(max-width:700px){
+    .rtext{
+        flex-direction:column;
+    }
+    b3 .overlay{
+        width:100%;
+        margin-right:initial;
+    }
+}
+@media(max-width:500px){
+    .text{
+        flex-direction:column;
+        align-items:flex-start;
+    }
+    .text h1{
+        font-size:5vh;
+    }
+    .text .image{
+        height: 200px;
+        width:140px;
+        margin-top: 20px;
+    }
+    .rtext{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .rtext p{
+        margin-top: 10px;
+    }
+    .icons{
+        margin-top: 10px;
+    }
+    .bottom{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .b1{
+        width:100%;
+    }
+    .b2{
+        width:100%
+    }
+    .b2 .up{
+        min-height: 30vh;
+    }
+    .b3{
+        width:100%;
+        min-height: 30vh;
+        background-position: left;
+    }
 }
